@@ -1,3 +1,8 @@
+2012-09-05  Martin Stjernholm  <mast@lysator.liu.se>
+
+	* gnus-demon.el (gnus-demon-init): Fixed regression when IDLE is t and
+	TIME is set.
+
 2012-09-05  Juri Linkov  <juri@jurta.org>
 
 	* gnus-group.el (gnus-read-ephemeral-bug-group): Allow opening more
